actualizacion de filecollector y file para adaptarse a las caracteristicas de extensionhandler para el manejo de dir_output

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,14 @@
 [ExtensionsHandler]
+
 [ExtensionsHandler.Imagenes]
 name = Imagenes
 extensions = ['png', 'jpeg', 'svg']
 directory = Imagenes
 ispath = False
+
+[ExtensionsHandler.Video]
+name = Video
+extensions = ['mp4', 'avi']
+directory = C:\Users\David Latosefki\Videos\probando
+ispath = True
 
