lo mismo que lo anterior( solo se cargo 1no solo . _.)

--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,14 @@
-[ExtensionsHandler]
+[initial_config]
+is_initial = False
 
-[ExtensionsHandler.Imagenes]
+[Filter.Imagenes]
 name = Imagenes
-extensions = ['png', 'jpeg', 'svg']
+extensions = ['png', 'jpeg', 'svg', 'jpg']
 directory = Imagenes
-ispath = False
 
-[ExtensionsHandler.Video]
+[Filter.Video]
 name = Video
-extensions = ['mp4', 'avi']
+extensions = ['mp4', 'avi', 'mkv']
 directory = C:\Users\David Latosefki\Videos\probando
-ispath = True
+
 
