--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,8 @@
 [initial_config]
 is_initial = False
 
-[Filter.Imagenes]
-name = Imagenes
-extensions = ['png', 'jpeg', 'svg', 'jpg']
+[Filter.imagenes]
+name = imagenes
+extensions = ['png', 'svg', 'jpeg', 'gif', 'jpg']
 directory = Imagenes
-
-[Filter.Video]
-name = Video
-extensions = ['mp4', 'avi', 'mkv']
-directory = C:\Users\David Latosefki\Videos\probando
-
 
