traduccion, correccion de bug,renombrado y extension de create_initial_filters, agregado de modulo extensions, traduccion al ingles de toda la interfaz y agregado de archivos ui de la misma

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,33 @@
 [initial_config]
 is_initial = False
 
-[Filter.imagenes]
-name = imagenes
-extensions = ['png', 'svg', 'jpeg', 'gif', 'jpg']
-directory = Imagenes
+[Filter.Images]
+name = Images
+extensions = ['jpg', 'jpeg', 'png', 'gif', 'tiff', 'bmp', 'raw', 'svg', 'webp', 'ico', 'eps', 'pdf', 'psd', 'ai', 'xcf', 'cdr']
+directory = Images
+
+[Filter.Videos]
+name = Videos
+extensions = ['mpg', 'mov', 'wmv', 'rm', 'mp4', 'avi', 'flv', 'mkv', '3gp', 'm4v', 'f4v', 'swf', 'webm', 'mpeg', 'vob']
+directory = Videos
+
+[Filter.Audio]
+name = Audio
+extensions = ['mp3', 'wav', 'wma', 'aac', 'flac', 'ogg', 'm4a', 'aiff', 'ape', 'au', 'mid', 'midi', 'mpa', 'mpc', 'ra']
+directory = Audios
+
+[Filter.Documents]
+name = Documents
+extensions = ['txt', 'doc', 'docx', 'pdf', 'xls', 'xlsx', 'ppt', 'pptx', 'rtf', 'odt', 'ods', 'odp', 'wpd', 'wps', 'pages']
+directory = Documents
+
+[Filter.Executables]
+name = Executables
+extensions = ['exe', 'bat', 'com', 'msi', 'jar', 'py', 'sh', 'bin', 'app', 'deb', 'rpm', 'dmg', 'apk', 'ipa', 'xap']
+directory = Executables
+
+[Filter.Compressed]
+name = Compressed
+extensions = ['zip', 'tar', 'targz', 'tarbz2', 'tarxz', 'tarlzma', '7z', 'rar', 'gz', 'bz2', 'xz', 'lzma']
+directory = Compressed
 
